2003-09-03  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-attribute-editor-cdata.c, cong-attribute-editor-enumeration.c, cong-attribute-editor.c, cong-attribute-editor.h

	Moved all document notifications and filtering to base class

	* cong-attribute-editor-enumeration.c, cong-attribute-editor-enumeration.h, Makefile.am, cong-attribute-editor.c, cong-attribute-editor.h

	Added new file for editing ENUMERATION attributes; moved code into it and reworked as a cong_attribute_editor subclass

2003-09-02  Jeff Martin <jeff@custommonkey.org>

	* plugin-doc-from-xds.c, cong-dispspec.c, cong-dispspec.h, cong-fake-plugin-hooks.h, main.c, Makefile.am

	New plugin to read contents of document-template from a dispspec and use this in the new document wizard as a template document.
	
2003-09-02  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-attribute-editor.c, cong-attribute-editor.h, cong-dialog.c, cong-node-properties-dialog.c, tree.c

	Created attribute editor class hierarchy; moved CDATA editing into new file as a subclass; removed some gtk_widget_show_all calls

	* cong-attribute-editor-cdata.c, cong-attribute-editor-cdata.h, Makefile.am

	New files
	
	* cong-node-properties-dialog.c, plugin-docbook.c

	Moved the attribute editor widget code to cong-attribute-editor.c
	
	* cong-attribute-editor.c, cong-attribute-editor.h, Makefile.am

	New files
	
2003-09-01  David Malcolm <david@davemalcolm.demon.co.uk>

	* plugin-docbook.c

	Fixed a bug in the text->docbook exporter: should now correctly terminate the input text buffer, rather than randomly continue until a zero byte is found on the heap

	* cong-range.c

	Added a missing header

	* cong-editor-area-line.c

	Fixed a bug in the constructor for the lines in a paragraph of text

	* cong-editor-area-entity-decl.c, cong-editor-area-entity-ref.c, cong-editor-area-structural-tag.c, cong-section-head-editor.c, cong-util.c, cong-util.h, xmlview.c
